--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              microadventures
-email:              barandun.marco@gmail.com
-description:        My personal website
+email:              microadventures.marco@gmail.com
+#description:        My personal website
 author:             Marco Barandun
 baseurl:            "/microadventures"
 url:                "https://marco-barandun.github.io"
